zokrates_cli/examples/error/forbidden_power_base.zok
def main(field a) -> (field):
	return a*2**3